Version next (2.3.0)
-------------

* Enforce RUNSTATEDIR to be ../run, not ../var/run
* Rename dbinit as db-import
* Add option --dump

Version 2.2.6
-------------

* Fix setting of smack label on socket directory (#182)

Version 2.2.5
-------------

* Fix installation of systemd
* Fix setting of smack label

Version 2.2.4
-------------

* Fix exit status of cynagora-admin
* Fix bug in protocol
